crates/wdl-grammar/tests/parsing/mismatched-brace/source.wdl
# This is a test of an unmatched brace.

version 1.1

task test {
    meta {
    }
